# git-paw

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE  README.md  SECURITY.md  about.hbs  cliff.toml  deny.toml  dist-workspace.toml  justfile
.git-paw/: config.toml  supervisor-findings.md  v0.7.0-dogfood-findings.md  v0.8.0-dogfood-findings.md
.git-paw/scripts/: sweep.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  commitlint.yml  docs.yml  release.yml
assets/: boot-block-template.md
assets/agent-skills/: coordination.md  docs-fetch.md  supervisor.md
assets/scripts/: broker.sh  docs-fetch.sh  sweep.sh
docs/: book.toml  generate_agent_metadata.py
docs/src/: SUMMARY.md  architecture.md  changelog.md  cli-reference.md  contributing.md  faq.md  installation.md  introduction.md  licenses.md  quick-start-per-branch.md  quick-start-same-cli.md  quick-start-supervisor.md  supported-clis.md
openspec/: README.md
src/: agents.rs  cli.rs  config.rs  dashboard.rs  detect.rs  dirs.rs  error.rs  git.rs  init.rs  interactive.rs  lib.rs  lock.rs  logging.rs  main.rs  merge_loop.rs  replay.rs  selftest.rs  session.rs  skills.rs  specs.rs  summary.rs  tmux.rs
src/broker/: conflict.rs  delivery.rs  learnings.rs  messages.rs  mod.rs  publish.rs  (+2 more)
tests/: add_remove_e2e.rs  approvals_integration.rs  auto_approve_integration.rs  boot_block_integration.rs  branch_guard_integration.rs  broker.rs  broker_agent_id_validation.rs  broker_integration.rs  broker_log_integration.rs  broker_sh_conventions.rs  broker_sh_session_discovery.rs  cli_from_specs_boot_block_failure.rs  cli_init_writes_broker_script.rs  cli_init_writes_docs_fetch_script.rs  cli_init_writes_supervisor_block.rs  cli_init_writes_sweep_script.rs  cli_recover_cwd.rs  cli_specs_tty_proceeds_to_picker.rs  cli_supervisor_no_config.rs  cli_supervisor_non_tty.rs  cli_tests.rs  commit_discipline_skill_content.rs  config_integration.rs  conflict_detection_integration.rs  coordination_inventory_integration.rs  coordination_region_skill_content.rs  cross_format_spec_selection.rs  dashboard_render.rs  dev_allowlist_integration.rs  docs_agent_surface.rs  docs_fetch_helper.rs  e2e_learnings_aggregator_disabled.rs  e2e_learnings_multi_session.rs  e2e_qualitative_learnings.rs  e2e_supervisor_approval_flags.rs  e2e_supervisor_launch.rs  e2e_supervisor_returns.rs  e2e_supervisor_stop.rs  e2e_tests.rs  from_specs_launch_fixes_integration.rs  (+43 more)
(+715 files in other folders)
